--- a/[CS]프로세스/index.html
+++ b/[CS]프로세스/index.html
@@ -172,4 +172,60 @@
 <li>우선순위를 갖는 시분할 스케쥴러</li>
 </ul>
 </li>
+</ul>
+<h2>인터럽트</h2>
+<ul>
+<li>CPU가 작업을 처리중인 상황에 하드웨어나 소프트웨어의 이벤트 발생, 예외상황 발생 처리를 위해 CPU에 알려주는 기술</li>
+<li>일종의 이벤트로 볼 수 있음</li>
+</ul>
+<h3>인터럽트가 필요한 이유</h3>
+<ul>
+<li>선점형 스케쥴러의 구현을 위해서는 running 상태의 프로세스를 중단시키고 다른 프로세스로 교체해야 함
+<ul>
+<li>이를 위해 스케쥴러 코드가 인터럽트를 통해 현재 실행중인 프로세스를 중단 시켜야 함</li>
+</ul>
+</li>
+<li>입출력 장치의 처리 혹은 예외상황(0으로 나누기 등)이 발생했을 때 CPU에서 해당 상황에 대한 처리를 위해 인터럽트를 통해 알릴 수 있음</li>
+</ul>
+<h3>인터럽트의 종류</h3>
+<h4>내부 인터럽트 (소프트웨어 인터럽트)</h4>
+<ol>
+<li>Divide-by-Zero 인터럽트 : 0으로 나누는 명령 실행 시 발생하는 인터럽트</li>
+</ol>
+<ul>
+<li>사용자 모드에서 잘못된 공간 접근 시
+<ul>
+<li>프로세스는 4GB의 메모리를 사용할 수 있는데 사용자 모드에서는 0GB<del>3GB, 커널모드에서는 3GB</del>4GB에 접근할 수 있음</li>
+</ul>
+</li>
+<li>계산 결과에서 Overflow 혹은 Underflow가 발생할 때</li>
+</ul>
+<h4>외부 인터럽트 (하드웨어 인터럽트)</h4>
+<ol>
+<li>타이머 인터럽트 : 선점형 스케쥴러를 구현하기 위해 일정 시간마다 인터럽트를 계속 발생시켜 현재 처리해야 하는 프로세스를 결정할 수 있음</li>
+<li>입출력 인터럽트 : 입출력 장치(키보드, 마우스, 저장매체, 프린터 등)에서 작업을 처리하고 완료됐음을 알려서 후속 처리를 할 수 있음</li>
+</ol>
+<h3>인터럽트 동작</h3>
+<h4>시스템 콜 인터럽트</h4>
+<ul>
+<li>시스템 콜을 실행하기 위해 인터럽트 명령을 넣어 실행시켜야 한다. → 커널 모드로 전환을 위해
+<ul>
+<li>eax 레지스터에 시스템 콜 번호를, ebx 레지스터에 인자값을 넣고 소프트웨어 인터럽트를 호출하면서 시스템콜에 해당하는 0x80값을 넘겨서 호출</li>
+<li>CPU가 커널모드로 IDT에서 0x80에 해당하는 함수(시스템 콜)를 실행</li>
+<li>시스템 콜 함수가 eax 레지스터에 저장된 시스템 콜 번호를 통해 원하는 시스템 콜 호출</li>
+<li>함수 실행 후, 다시 사용자 모드로 변경하고 다시 해당 프로세스 다음코드 실행</li>
+</ul>
+</li>
+</ul>
+<h4>IDT</h4>
+<ul>
+<li>인터럽트는 미리 정의되어 있는 실행코드의 주소를 IDT에 저장하고 있음</li>
+<li>컴퓨터 부팅 시 운영체제가 커널 영역에 IDT영역을 초기화하고 정의함</li>
+<li>리눅스 기준으로 아래와 같이 구분되어 있음
+<ul>
+<li>0 ~ 31 : 예외상황 인터럽트</li>
+<li>32 ~ 47 : 하드웨어 인터럽트</li>
+<li>128(<code class="language-text">0x80</code>) : 시스템 콜</li>
+</ul>
+</li>
 </ul></section><hr/><footer></footer></article><nav class="blog-post-nav"><ul style="display:flex;flex-wrap:wrap;justify-content:space-between;list-style:none;padding:0"><li><a rel="prev" href="/[CS]운영체제/">← <!-- -->[CS] 운영체제</a></li><li></li></ul></nav></main><footer>© <!-- -->2021</footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/[CS]프로세스/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-22d8e52467af59d6195e.js"],"app":["/app-9efc9f01be414ff97736.js"],"component---src-pages-404-js":["/component---src-pages-404-js-e3b7bf6b448cc0693d07.js"],"component---src-pages-about-js":["/component---src-pages-about-js-8f92fdbe885f42521337.js"],"component---src-pages-index-js":["/component---src-pages-index-js-bb4c07a3c58b24373d0e.js"],"component---src-templates-blog-post-js":["/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js"]};/*]]>*/</script><script src="/polyfill-22d8e52467af59d6195e.js" nomodule=""></script><script src="/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js" async=""></script><script src="/commons-92247d2d2a91ce365536.js" async=""></script><script src="/app-9efc9f01be414ff97736.js" async=""></script><script src="/framework-de777ff0ab3a85d108fd.js" async=""></script><script src="/webpack-runtime-91e26ca927397cd9e11f.js" async=""></script></body></html>
