--- a/[CS]프로세스/index.html
+++ b/[CS]프로세스/index.html
@@ -253,4 +253,31 @@
 <ul>
 <li>PC(Program counter) : 코드가 실행되는 주소값을 저장하는 레지스터</li>
 <li>SP(Stack Pointer) : 현재 스택의 Top주소를 저장하는 레지스터</li>
+<li>EBP : 함수가 호출되면 EBP에서 함수가 시작되는 부분을 기록해서 예외가 발생했을 때 예외가 발생한 함수를 특정할 수 있게 해 주는 레지스터</li>
+<li>EAX : 함수의 반환값을 저장하는 레지스터</li>
+</ul>
+<h2>힙 영역</h2>
+<ul>
+<li>동적인 메모리의 공간을 관리하는 영역</li>
+<li>힙 영역의 주소값을 스택 영역에 저장하여 변수에 할당할 수 있음</li>
+</ul>
+<h2>데이터 영역</h2>
+<ul>
+<li>데이터 영역은 두가지로 구분된다.</li>
+<li>BSS : 초기화되지 않은 전역변수
+<ul>
+<li>코드 내에서 선언만 했을 경우</li>
+</ul>
+</li>
+<li>DATA : 초기값이 있는 전역변수
+<ul>
+<li>코드 내에서 선언과 함께 초기값을 할당했을 경우</li>
+</ul>
+</li>
+</ul>
+<h1>컨텍스트 스위칭</h1>
+<ul>
+<li>스케쥴러가 running 상태의 프로세스를 바꿀 때 두 프로세스에서 상태를 변경하는 방법</li>
+<li>A → B 로 컨텍스트 스위칭이 일어나면 현재 레지스터의 PC와 SP를 PCB라는 공간에 저장해서 현재 실행중인 상태를 보관할 수 있음</li>
+<li>B → A 로 다시 컨텍스트 스위칭이 일어나면 PCB를 확인해서 저장된 PC와 SP를 레지스터에 덮어씌워 이전에 진행하던 상태로 돌아옴</li>
 </ul></section><hr/><footer></footer></article><nav class="blog-post-nav"><ul style="display:flex;flex-wrap:wrap;justify-content:space-between;list-style:none;padding:0"><li><a rel="prev" href="/[CS]운영체제/">← <!-- -->[CS] 운영체제</a></li><li></li></ul></nav></main><footer>© <!-- -->2021</footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/[CS]프로세스/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-22d8e52467af59d6195e.js"],"app":["/app-9efc9f01be414ff97736.js"],"component---src-pages-404-js":["/component---src-pages-404-js-e3b7bf6b448cc0693d07.js"],"component---src-pages-about-js":["/component---src-pages-about-js-8f92fdbe885f42521337.js"],"component---src-pages-index-js":["/component---src-pages-index-js-bb4c07a3c58b24373d0e.js"],"component---src-templates-blog-post-js":["/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js"]};/*]]>*/</script><script src="/polyfill-22d8e52467af59d6195e.js" nomodule=""></script><script src="/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js" async=""></script><script src="/commons-92247d2d2a91ce365536.js" async=""></script><script src="/app-9efc9f01be414ff97736.js" async=""></script><script src="/framework-de777ff0ab3a85d108fd.js" async=""></script><script src="/webpack-runtime-91e26ca927397cd9e11f.js" async=""></script></body></html>
