--- a/[CS]프로세스/index.html
+++ b/[CS]프로세스/index.html
@@ -293,9 +293,9 @@
 <li>다른 프로세스간의 상호 접근하는 방법은 보안상의 이유로 제공되지 않음</li>
 <li>필요한 경우 프로세스간의 통신을 할 수 있는 IPC(InterProcess Communication)라는 방법을 제공함</li>
 </ul>
-<h4>fork() 시스템 콜</h4>
+<h4><code class="language-text">fork()</code> 시스템 콜</h4>
 <ul>
-<li>fork() 시스템 콜을 통해 하나의 프로세스를 복사하여 새로운 프로세스를 만들 수 있음</li>
+<li><code class="language-text">fork()</code> 시스템 콜을 통해 하나의 프로세스를 복사하여 새로운 프로세스를 만들 수 있음</li>
 <li>복사된 프로세스와 통신하기 위해서는 IPC를 사용해야 함</li>
 </ul>
 <h4>프로세스간 통신이 필요한 이유</h4>
@@ -306,7 +306,7 @@
 <h4>프로세스 가상메모리의 커널영역</h4>
 <ul>
 <li>각 프로세스는 가상메모리로 4GB씩 할당받는다. 이는 실제 물리메모리에 올라가는 크기가 아니라 프로세스 내에서 활용할 수 있는 공간을 가상으로 할당한 영역이다.</li>
-<li>이 때 0<del>3GB는 프로세스가 사용하는 공간 3</del>4GB는 운영체제 커널이 할당된 공간이다</li>
+<li>이 때 0~3GB는 프로세스가 사용하는 공간 3~4GB는 운영체제 커널이 할당된 공간이다</li>
 <li>커널 영역은 실제 물리메모리에 올라갈 때 모든 프로세스가 같은 공간을 공유하게 되어있음</li>
 <li>이 영역을 활용해서 IPC가 가능</li>
 </ul>
@@ -320,8 +320,8 @@
 </ul>
 <h4>Pipe</h4>
 <ul>
-<li>fork()를 통해 복사된 프로세스를 향해 단방향으로 데이터를 전달할 수 있음</li>
-<li>pipe() 시스템 콜에 배열을 전달하면 배열의 1번 인덱스에 작성한 내용을 0번 인덱스에서 읽을 수 있음
+<li><code class="language-text">fork()</code>를 통해 복사된 프로세스를 향해 단방향으로 데이터를 전달할 수 있음</li>
+<li><code class="language-text">pipe()</code> 시스템 콜에 배열을 전달하면 배열의 1번 인덱스에 작성한 내용을 0번 인덱스에서 읽을 수 있음
 <ul>
 <li>단방향 통신이기 때문에 1에서 작성해서 0에서 읽는 건 가능하나, 0에서 작성해서 1로(역방향) 가는 것은 불가능하다</li>
 </ul>
