--- a/[CS]프로세스/index.html
+++ b/[CS]프로세스/index.html
@@ -337,4 +337,58 @@
 <ul>
 <li>커널에 대놓고 메모리 영역을 만들고 해당 영역을 변수처럼 사용하는 방식</li>
 <li>해당 공유 메모리의 key를 가지고 다수의 프로세스에서 접근할 수 있음</li>
+</ul>
+<h4>시그널 (Signal)</h4>
+<ul>
+<li>유닉스에서 30년 이상 사용하고 있는 커널 또는 프로세스에서 다른 프로세스로 이벤트 발생을 알려주는 기법</li>
+<li>프로세스 관련 코드에 미리 시그널 핸들러를 등록하고 시그널을 받으면 해당 시그널 핸들러를 실행
+<ul>
+<li>프로그램에서 특정 시그널에 대한 동작을 임의로 지정해 줄 수 있음
+<ul>
+<li>해당 시그널을 무시</li>
+<li>시그널 블록과 언블록을 통해 지연전달</li>
+<li>특정 동작을 핸들러로 등록해서 임의로 지정</li>
+<li>별도로 지정하지 않으면 커널의 기본 동작 수행</li>
+</ul>
+</li>
+<li>지정되지 않는 시그널을 받으면 기본적으로 지정된 핸들러가 동작</li>
+<li>프로세스의 PCB 내부에 해당 프로세스에서 블록된 혹은 처리해야하는 시그널에 관련 정보를 관리함</li>
+<li>커널모드에서 사용자모드로 전환 할 때 PCB의 대기중인 시그널을 확인해 커널모드를 유지하는 경우도 있음</li>
+</ul>
+</li>
+</ul>
+<h4>소켓 (Socket)</h4>
+<ul>
+<li>서버와 클라이언트 등 두개의 다른 컴퓨터간 네트워크 기반 통신을 위한 기술</li>
+<li>소켓을 시스템 콜로 사용해 하나의 컴퓨터 안에서 두 개의 프로세스간의 통신 기법으로 활용할 수 있음</li>
+</ul>
+<h2>마무리</h2>
+<ul>
+<li>하나의 코드를 실행하게 되면 다음의 단계를 따라 진행된다.
+<ol>
+<li>프로세스 생성 후 NEW 상태로 변경</li>
+<li>메모리에 스택, 힙, 데이터(BBS, DATA), 코드 영역이 할당</li>
+<li>소스코드 텍스트가 코드 영역에 입력</li>
+<li>전역 변수를 데이터 영역에 입력</li>
+<li>프로세의 상태를 READY 상태로 전환</li>
+<li>스케쥴러에 의해 컨텍스트 스위칭이 일어나 RUNNING 상태로 전환</li>
+<li>프로세스의 PCB를 불러와서 PC와 SP를 초기화</li>
+<li>코드의 메인함수를 실행 → SP를 EBP에 저장, 다음 SP에 리턴 주소를 할당</li>
+<li>함수내의 지역변수를 스택에 입력</li>
+<li>함수내의 시스템 콜이 일어나게 되면 다음의 단계를 따라 진행된다.
+<ol>
+<li>시스템 콜의 번호와 시스템 콜의 인자를 EAX, EBX에 저장한 뒤, 0x80 주소로 시스템 콜 인터럽트를 실행</li>
+<li>CPU의 모드가 커널 모드로 변경</li>
+<li>IDT에서 0x80에 해당하는 주소의 함수를 찾아서 호출</li>
+<li><code class="language-text">system_call</code>함수에서 EAX에 저장된 시스템 콜의 번호를 찾아서, 해당 번호에 맞는 시스템 콜 함수로 이동</li>
+<li>해당 시스템 콜 함수를 실행한 뒤, 다시 사용자 모드로 변경하고 프로세스의 다음 코드 진행</li>
+<li>만약 시스템 콜 함수에 대기가 필요하다면 프로세스의 상태를 WAITING으로 변경 한다</li>
+<li>시스템 콜의 처리가 끝나면 인터럽트를 통해 WAITING된 프로세스를 READY상태로 바꿔준다</li>
+</ol>
+</li>
+<li>함수가 종료하게 될 때 반환값이 있다면 프로세스 레지스터의 EAX에 저장한 뒤 스택을 모두 POP한다.</li>
+<li>리턴 어드레스를 POP하게 되면 해당 주소의 코드를 실행하고 만약 반환값을 사용한다면 EAX에 저장된 값을 사용한다</li>
+<li>프로세스가 종료하게 되면 프로세스의 상태를 TERMINATED로 변경하고 종료한다.</li>
+</ol>
+</li>
 </ul></section><hr/><footer></footer></article><nav class="blog-post-nav"><ul style="display:flex;flex-wrap:wrap;justify-content:space-between;list-style:none;padding:0"><li><a rel="prev" href="/[CS]운영체제/">← <!-- -->[CS] 운영체제</a></li><li></li></ul></nav></main><footer>© <!-- -->2021</footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/[CS]프로세스/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-22d8e52467af59d6195e.js"],"app":["/app-9efc9f01be414ff97736.js"],"component---src-pages-404-js":["/component---src-pages-404-js-e3b7bf6b448cc0693d07.js"],"component---src-pages-about-js":["/component---src-pages-about-js-8f92fdbe885f42521337.js"],"component---src-pages-index-js":["/component---src-pages-index-js-bb4c07a3c58b24373d0e.js"],"component---src-templates-blog-post-js":["/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js"]};/*]]>*/</script><script src="/polyfill-22d8e52467af59d6195e.js" nomodule=""></script><script src="/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js" async=""></script><script src="/commons-92247d2d2a91ce365536.js" async=""></script><script src="/app-9efc9f01be414ff97736.js" async=""></script><script src="/framework-de777ff0ab3a85d108fd.js" async=""></script><script src="/webpack-runtime-91e26ca927397cd9e11f.js" async=""></script></body></html>
