--- a/[CS]스레드/index.html
+++ b/[CS]스레드/index.html
@@ -47,6 +47,67 @@
 </ul>
 <h2>동기화 이슈</h2>
 <ul>
-<li>다수의 스레드 사이의 실행 순서는 보장되지 않기 때문에 공유된 변수를 사용할 때 예측하지 못한 동작이 일어날 수 있음</li>
-<li>그렇기 때문에 스레드를 별도로 관리해서 동기화 이슈를 처리해야 함</li>
+<li>다수의 스레드 사이의 실행 순서는 보장되지 않기 때문에 공유된 공간의 변수를 사용할 때 예측하지 못한 동작이 일어날 수 있음
+<ul>
+<li>코드가 실행될 때 어셈블리어 레벨의 연산 중간에 컨텍스트 스위칭이 일어나게 되면 연산이 누락되는 등의 문제가 발생할 수 있음</li>
+</ul>
+</li>
+<li>때문에 다양한 방법을 통해 스레드의 작업 순서를 맞춰 동기화에 문제가 없게 해야함</li>
+</ul>
+<h3>Mutual Exclusion (상호 배제)</h3>
+<ul>
+<li>스레드에서 하나의 연산을 하나의 스레드가 끝낼 때 까지 다른 스레드에서 접근하지 못하도록 방지하는 기법</li>
+<li>하나의 연산을 점유하고 있는 스레드가 중간에 컨텍스트 스위칭이 일어나 다른 스레드에서 같은 연산을 처리할 때 이미 점유중인 스레드가 있다면 해당 스레드는 점유가 끝날 때 까지 대기함</li>
+<li>스레드에서 반드시 한 번에 처리되어야 하는 임계영역을 지정하여 임계자원의 동기화를 보장할 수 있음</li>
+</ul>
+<h3>Mutex와 Semaphore(세마포어)</h3>
+<ul>
+<li>Mutex(Binary Semaphore)
+<ul>
+<li>임계구역에 하나의 스레드만 들어갈 수 있음</li>
+</ul>
+</li>
+<li>Semaphore
+<ul>
+<li>임계구역 내에 다수의 스레드가 들어갈 수 있음</li>
+<li>Counter를 통해 리소스에 접근할 수 있는 허용 가능한 스레드 수를 제어</li>
+<li>바쁜 대기 → 임계구역에 접근하지 못하도록 스레드 내에서 Counter 값을 조건으로 임계구역 앞에서 무한 Loop를 돌려 접근을 방지시킴</li>
+<li>대기 큐 → 운영체제 기술로 해당 스레드의 상태를 ready상태에서 대기 상태로 바꾸거나 스케쥴러의 대기 큐에 할당하여 접근을 방지시킴
+<ul>
+<li>세마포어를 구현해 놓은 시스템 API 함수가 있음 → POSIX 세마포어
+<ul>
+<li><code class="language-text">sem_open()</code> : 세마포어 생성</li>
+<li><code class="language-text">sem_wait()</code> : 임계영역 접근 전 세마포어 상태를 확인해 세마포어를 잠그거나 풀릴 때 까지 대기</li>
+<li><code class="language-text">sem_post()</code> : 임계영역에 대한 접근이 끝나고 세마포어의 잠금을 해제</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<h3>Deadlock(교착상태)와 Starvation(기아상태)</h3>
+<h4>교착상태(Deadlock)</h4>
+<ul>
+<li>무한 대기 상태 : 두 개 이상의 작업이 서로 작업이 끝나야 진행할 수 있는 상태에서 대기하게 되어 진행이 되지 않는 상태</li>
+<li>교착 상태가 발생하는 조건 4가지
+<ul>
+<li>Mutual exclusion (상호 배제) : 프로세스들이 필요로 하는 자원에 대해 배타적인 통제권을 요구</li>
+<li>Hold and wait (점유 대기) : 프로세스가 할당된 자원을 가진 상태에서 다른 자원을 기다림</li>
+<li>No preemption (비선점) : 프로세스가 어떤 자원의 사용을 끝내기 전까지 그 자원을 선점할 수 없음</li>
+<li>Circular wait (순환 대기) : 각 프로세스는 순환적으로 다음 프로세스가 요구하는 자원을 갖고 있음</li>
+</ul>
+</li>
+<li>위의 네가지 조건 중에 하나를 예방/해결하는 방법으로 교착상태를 방지할 수있다</li>
+</ul>
+<h4>기아상태(Starvation)</h4>
+<ul>
+<li>특정 프로세스(스레드)의 우선순위가 낮아서 원하는 자원을 계속 할당 받지 못하는 상태</li>
+<li>교착상태와 차이 → 교착상태는 여러 프로세스가 동일 자원 점유를 요청할 때 발생, 기아상태는 여러 프로세스가 작원을 점유할 때, 우선순위가 낮은 프로세스가 영원히 자원 할당이 되지 않는 경우를 의미</li>
+<li>우선순위를 수시로 변경해서 해결
+<ul>
+<li>오래 기다린 프로세스의 우선순위를 높여주기</li>
+<li>우선순위가 아니라 Queue방식으로 처리</li>
+</ul>
+</li>
 </ul></section><hr/><footer></footer></article><nav class="blog-post-nav"><ul style="display:flex;flex-wrap:wrap;justify-content:space-between;list-style:none;padding:0"><li><a rel="prev" href="/[CS]프로세스/">← <!-- -->[CS] 프로세스</a></li><li></li></ul></nav></main><footer>© <!-- -->2021</footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/[CS]스레드/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-22d8e52467af59d6195e.js"],"app":["/app-9efc9f01be414ff97736.js"],"component---src-pages-404-js":["/component---src-pages-404-js-e3b7bf6b448cc0693d07.js"],"component---src-pages-about-js":["/component---src-pages-about-js-8f92fdbe885f42521337.js"],"component---src-pages-index-js":["/component---src-pages-index-js-bb4c07a3c58b24373d0e.js"],"component---src-templates-blog-post-js":["/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js"]};/*]]>*/</script><script src="/polyfill-22d8e52467af59d6195e.js" nomodule=""></script><script src="/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js" async=""></script><script src="/commons-92247d2d2a91ce365536.js" async=""></script><script src="/app-9efc9f01be414ff97736.js" async=""></script><script src="/framework-de777ff0ab3a85d108fd.js" async=""></script><script src="/webpack-runtime-91e26ca927397cd9e11f.js" async=""></script></body></html>
