--- a/[CS]가상메모리/index.html
+++ b/[CS]가상메모리/index.html
@@ -79,4 +79,83 @@
 <li>CPU에서 가상주소를 요청했을 때 먼저 TLB를 확인하여 캐싱된 물리주소가 있다면 바로 처리</li>
 </ul>
 </li>
+</ul>
+<h2>페이징 시스템과 공유 메모리</h2>
+<ul>
+<li>프로세스 사이에서 동일한 물리 주소를 가르킬 수 있음</li>
+<li>대표적으로 모든 프로세스의 커널 영역의 경우 물리메모리에서 동일한 주소를 갖고있음</li>
+<li>하나의 프로세스를 Fork하여 프로세스를 복사하여 만들 경우 복사된 가상 메모리는 부모 프로세스와 같은 물리메모리를 공유하고 <strong>해당 프로세스에서 데이터가 수정될 경우 그 때 새롭게 물리 메모리를 할당</strong>함</li>
+</ul>
+<h2>요구 페이징 (Demand Paging 또는 Demanded Paiging)</h2>
+<ul>
+<li>선행 페이징과 반대되는 개념</li>
+<li>프로세스의 데이터를 모두 메모리에 올리지 않고 실행 중 필요한 시점에서 메모리에 적재하는 기법</li>
+<li>중간에 필요가 없어진 페이지 프레임은 다시 저장매체에 저장 (페이지 교체 알고리즘)</li>
+</ul>
+<h3>페이지 폴트 인터럽트 (Page Fault Interrupt)</h3>
+<ul>
+<li>필요한 페이지가 물리 메모리에 없을 때 일어나는 인터럽트</li>
+<li>Page Fault가 일어나면 해당하는 페이지를 물리 메모리에 올리게 됨</li>
+<li>Page Fault가 자주 일어나게 되면 성능에 영향이 생기기 때문에 최적화를 해줘야 함
+<ul>
+<li>자주 사용되거나 반드시 사용될 데이터는 미리 물리 메모리에 올려놓는 알고리즘을 구성</li>
+</ul>
+</li>
+<li>Page Fault가 발생할 때는 외부 저장장치와 통신이 발생하기 때문에 병목이 발생할 수 있음</li>
+</ul>
+<h2>페이지 교체 정책 (Page Replacement Policy)</h2>
+<ul>
+<li>새로운 페이지를 물리 메모리에 올려야 하는 상황에 물리 메모리가 부족할 때
+<ul>
+<li>기존에 올라와 있던 페이지 중 하나를 물리메모리에서 내리고 외부 저장장치에 저장한 뒤</li>
+<li>새로운 페이지를 해당 공간에 올린다</li>
+<li>이 때, 기존에 올라와 있던 페이지 중 어떤 페이지를 내려야 할 지 선택하는 것이 페이지 교체 정책</li>
+</ul>
+</li>
+</ul>
+<h3>FIFO</h3>
+<ul>
+<li>가장 먼저 올라온 페이지가 가장 먼저 교체됨</li>
+</ul>
+<h3><strong>OPT</strong></h3>
+<ul>
+<li>OPTimal Repacement Algorithm</li>
+<li>앞으로 가장 오랫동안 사용하지 않을 페이지가 먼저 교체됨</li>
+<li>그러나 가장 오랫동안 사용하지 않을 페이지를 알아내는 것은 사실상 불가능</li>
+<li>일반적인 OS에서는 구현 불가능</li>
+</ul>
+<h3><strong>LRU</strong></h3>
+<ul>
+<li>Least Recently Used</li>
+<li>가장 오래 전에 사용된 페이지를 교체</li>
+<li>가장 많이 사용되는 알고리즘</li>
+</ul>
+<h3><strong>LFU</strong></h3>
+<ul>
+<li>Least Frequently Used</li>
+<li>가장 적게 사용된 페이지를 교체</li>
+</ul>
+<h3><strong>NUR</strong></h3>
+<ul>
+<li>Not Used Recently</li>
+<li>NRU와 같지만 각 페이지 마다 참조 비트와 수정 비트를 넣어 사용빈도가 낮은 페이지부터 교체되도록 우선순위를 추가한다
+<ul>
+<li>(참조, 수정)으로 했을 때 (0, 0), (0, 1), (1, 0), (1, 1) 순으로 페이지를 교체</li>
+</ul>
+</li>
+</ul>
+<h3>스레싱</h3>
+<ul>
+<li>페이지 폴트가 너무 많이 발생하여 과도한 페이지 교체 작업으로 인해 CPU 동작이 중단되는 상황</li>
+</ul>
+<h2>세그멘테이션</h2>
+<ul>
+<li>가상 메모리를 서로 크기가 다른 논리적 단위인 세그먼트로 분할해서 관리하는 방법</li>
+<li>페이징 기법과 다르게 각 블록의 크기가 다를 수 있음</li>
+<li>각 세그먼트별로 역할이나 의미를 갖는 경우가 많음</li>
+<li>페이징 방식과 물리주소 계산방식은 유사하다
+<ul>
+<li>가상주소로 요청을 들어오면 세그먼트 테이블에서 물리메모리의 기준주소와 오프셋을 더해 실제 주소를 받아올 수 있음</li>
+</ul>
+</li>
 </ul></section><hr/><footer></footer></article><nav class="blog-post-nav"><ul style="display:flex;flex-wrap:wrap;justify-content:space-between;list-style:none;padding:0"><li><a rel="prev" href="/[CS]스레드/">← <!-- -->[CS] 스레드</a></li><li></li></ul></nav></main><footer>© <!-- -->2021</footer></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/[CS]가상메모리/";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-22d8e52467af59d6195e.js"],"app":["/app-9efc9f01be414ff97736.js"],"component---src-pages-404-js":["/component---src-pages-404-js-e3b7bf6b448cc0693d07.js"],"component---src-pages-about-js":["/component---src-pages-about-js-8f92fdbe885f42521337.js"],"component---src-pages-index-js":["/component---src-pages-index-js-bb4c07a3c58b24373d0e.js"],"component---src-templates-blog-post-js":["/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js"]};/*]]>*/</script><script src="/polyfill-22d8e52467af59d6195e.js" nomodule=""></script><script src="/component---src-templates-blog-post-js-38cea8ed3b546c66ff97.js" async=""></script><script src="/commons-92247d2d2a91ce365536.js" async=""></script><script src="/app-9efc9f01be414ff97736.js" async=""></script><script src="/framework-de777ff0ab3a85d108fd.js" async=""></script><script src="/webpack-runtime-91e26ca927397cd9e11f.js" async=""></script></body></html>
